# quickdraw_gan

./: .dockerignore  .gitignore  Dockerfile.train_GAN  Dockerfile.train_cGAN  Pipfile  README.md  docker-train.sh  pyproject.toml
fashion_mnist/: GAN_generate.py  GAN_train.py  cGAN_generate.py  cGAN_train.py  generate.py  get_dataset.py  main.py
quickdraw_gan/: cGAN_generate.py  cGAN_train.py
tests/: test_fashion_mnist.py
