[tool.poetry]
name = "QuickdrawGAN"
version = "0.1.0"
description = ""
authors = ["John Naylor <jonaylor89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
keras = "^2.3.1"
tensorflow = "^2.5.3"
matplotlib = "^3.1.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
